--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -2,20 +2,27 @@
 .hero-container {
   width: 100vw;
   height: 100vh;
-  background-repeat: no-repeat;
-  background-image: url("/assets/WebMainPic.jpg");
-  background-size: cover;
+  /* background-repeat: no-repeat; */
+  /* background-image: url("/assets/WebMainPic.jpg"); */
+  /* background-size: cover; */
   & .hero-text {
+  left: 50%;
+  transform: translateX(-50%);
     margin-left: auto;
+    position: absolute;
     margin-right: auto;
     text-align: center;
     color: $text-light;
     & h2 {
       padding-top: 20px;
       padding-bottom: 5px;
+    text-align: center;
       color: $text-light;
+      z-index: 3;
     }
     & h3 {
+      z-index: 3;
+    text-align: center;
       color: $text-light;
     }
   }
@@ -32,6 +39,19 @@
         padding: 20px 50px;
       }
     }
-
+  }
+  & .video-container {
+    z-index: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    & video {
+    z-index: 0;
+    position: absolute;
+    height: 100%;
+    width: auto;
+          /* position: fixed; */
+    }
   }
 }
