--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,1 +1,392 @@
-@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");@import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed&display=swap");@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");*{box-sizing:border-box;margin:0}html{scroll-behavior:smooth;background-color:#efefef}body{background-color:#efefef}.app{width:100vw;overflow:hidden}body{font-family:'Barlow Semi Condensed', -apple-system, Roboto, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;margin:0;-webkit-font-smoothing:antialiased;color:#fff;background:#efefef;font-weight:400}h1{font-family:'Barlow Semi Condensed', sans-serif;font-size:8em;font-weight:400;line-height:0.9em}h2{font-family:'Barlow Semi Condensed', sans-serif;font-size:4.5em;font-weight:400}h3{font-family:'Barlow Semi Condensed', sans-serif;font-size:2.5em;font-weight:400}p{font-family:'Barlow Semi Condensed', sans-serif;font-size:1.5em;font-weight:400}a{text-decoration:none;font-family:'Barlow Semi Condensed', sans-serif;font-size:3em;font-weight:400;color:#fff}.accent{color:#2db67e}.active{color:#2db67e}.hero-container{width:100vw;height:100vh;background-repeat:no-repeat;background-image:url("/assets/WebMainPic.jpg");background-size:cover}.hero-container .hero-text{margin-left:auto;margin-right:auto;text-align:center;color:#fff}.hero-container .hero-text h2{padding-top:20px;padding-bottom:5px;color:#fff}.hero-container .hero-text h3{color:#fff}.hero-container .hero-header ul{width:100%;list-style:none;display:flex;justify-content:center;justify-self:center;position:absolute;bottom:30px}.hero-container .hero-header ul a{padding:20px 50px}#container{margin:auto}@media (min-width: 48em){#container{margin-left:0}}button{position:relative;display:inline-block;cursor:pointer;outline:none;border:0;vertical-align:middle;text-decoration:none;background:transparent;padding:0;font-size:1.7em;font-weight:200;font-family:inherit}.learn-more{width:14rem;height:auto}.learn-more .circle{-webkit-transition:all 0.45s cubic-bezier(0.65, 0, 0.076, 1);transition:all 0.45s cubic-bezier(0.65, 0, 0.076, 1);position:relative;display:block;margin:0;width:3rem;height:3rem;background:#105157;border-radius:1.625rem}.learn-more .circle .icon{-webkit-transition:all 0.45s cubic-bezier(0.65, 0, 0.076, 1);transition:all 0.45s cubic-bezier(0.65, 0, 0.076, 1);position:absolute;top:0;bottom:0;margin:auto;background:#efefef}.learn-more .circle .icon.arrow{-webkit-transition:all 0.45s cubic-bezier(0.65, 0, 0.076, 1);transition:all 0.45s cubic-bezier(0.65, 0, 0.076, 1);left:0.625rem;width:1.125rem;height:0.125rem;background:none}.learn-more .circle .icon.arrow::before{position:absolute;content:'';top:-0.25rem;right:0.0625rem;width:0.625rem;height:0.625rem;border-top:0.125rem solid #efefef;border-right:0.125rem solid #efefef;-webkit-transform:rotate(45deg);transform:rotate(45deg)}.learn-more .button-text{-webkit-transition:all 0.45s cubic-bezier(0.65, 0, 0.076, 1);transition:all 0.45s cubic-bezier(0.65, 0, 0.076, 1);position:absolute;top:0;left:0;right:0;bottom:0;padding:0.4rem 0;margin:0 0 0 2rem;color:#105157;font-weight:600;line-height:1.3;text-align:center;text-decoration:none}button:hover .circle{width:100%}button:hover .circle .icon .arrow{background:#efefef;-webkit-transform:translate(1rem, 0);transform:translate(1rem, 0)}button:hover .button-text{color:#efefef}.header-container{width:100%;align-items:center;position:absolute}.header{position:relative;margin:auto;padding:20px 20px;z-index:2;display:flex;flex-direction:row;justify-content:center;align-items:center;max-width:1080px;width:100%}.header img{margin-left:auto auto 0 auto;width:60px}.header ul{display:none;list-style:none;flex-direction:row;margin:auto}@media (min-width: 48em){.header ul{display:flex}}.header a{font-size:2em;padding:0 20px;text-decoration:none;color:#fff}.active a{color:#fff}.menu-btn{margin:0;position:relative;display:flex;justify-content:center;align-items:center;width:40px;height:40px;cursor:pointer;transition:all 0.5s ease-in-out}.menu-btn__burger{width:30px;height:4px;background:#efefef;border-radius:5px;transition:all 0.5s ease-in-out}.menu-btn__burger::before,.menu-btn__burger::after{content:'';position:absolute;width:30px;height:4px;background:#efefef;border-radius:5px;transition:all 0.5s ease-in-out}.menu-btn__burger::before{transform:translateY(-10px)}.menu-btn__burger::after{transform:translateY(10px)}.menu-btn.open .menu-btn__burger{transform:translateX(-50px);background:transparent;box-shadow:none}.menu-btn.open .menu-btn__burger::before{transform:rotate(45deg) translate(35px, -35px)}.menu-btn.open .menu-btn__burger::after{transform:rotate(-45deg) translate(35px, 35px)}.home{width:100%;height:100vh;display:flex;margin:auto;flex-direction:column;align-items:center;justify-content:center}@media (min-width: 48em){.home{flex-direction:row}}.home .text-bar{overflow:hidden;display:flex;margin:0;justify-content:center;align-items:center;width:fit-content;padding:0;animation:animateHeroText 0.1s ease-in-out forwards;animation-delay:1s}.home h1{font-size:7em;text-align:center;padding-left:40px;padding-right:40px;animation:animateHeader 2s ease-in-out forwards;animation-delay:1.4s;overflow:hidden;opacity:0;z-index:-2}@media (min-width: 48em){.home h1{text-align:right}}.home .vert-rectangle{overflow:hidden;animation:lineIn 0.7s ease-in-out forwards;animation-delay:0.7s;display:none;width:5px;height:250px;z-index:2;border-radius:10px;align-self:center;background:#105157}@media (min-width: 48em){.home .vert-rectangle{display:inline}}.home img{padding-left:40px;margin-left:0;width:400px;height:400px;transform:translateX(-50%);animation:animateHeroImage 1s ease-in-out forwards;animation-delay:0.5s}.section-header{margin-left:0;width:100vw}.section-header h2{font-size:4em;margin:auto;text-align:center;padding:5px 20px}.section-header .fancy-rectangle{margin:auto;width:270px;height:5px;border-radius:5px;background-color:#efefef}@keyframes animateHeroText{0%{opacity:0}100%{opacity:1}}@keyframes animateHeroImage{0%{transform:translateX(-50%)}100%{transform:translateX(0px)}}@keyframes lineIn{0%{height:1em}100%{height:20em}}@keyframes animateHeader{0%{transform:translateX(200px);opacity:0}100%{transform:translateX(0px);opacity:1}}
+@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
+* {
+  box-sizing: border-box;
+  margin: 0; }
+
+html {
+  scroll-behavior: smooth;
+  background-color: #efefef; }
+
+body {
+  background-color: #efefef; }
+
+.app {
+  width: 100vw;
+  overflow: hidden; }
+
+body {
+  font-family: 'Barlow Semi Condensed', -apple-system, Roboto, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin: 0;
+  -webkit-font-smoothing: antialiased;
+  color: #fff;
+  background: #efefef;
+  font-weight: 400; }
+
+h1 {
+  font-family: 'Barlow Semi Condensed', sans-serif;
+  font-size: 8em;
+  font-weight: 400;
+  line-height: 0.9em; }
+
+h2 {
+  font-family: 'Barlow Semi Condensed', sans-serif;
+  font-size: 4.5em;
+  font-weight: 400; }
+
+h3 {
+  font-family: 'Barlow Semi Condensed', sans-serif;
+  font-size: 2.5em;
+  font-weight: 400; }
+
+p {
+  font-family: 'Barlow Semi Condensed', sans-serif;
+  font-size: 1.5em;
+  font-weight: 400; }
+
+a {
+  text-decoration: none;
+  font-family: 'Barlow Semi Condensed', sans-serif;
+  font-size: 3em;
+  font-weight: 400;
+  color: #fff; }
+
+.accent {
+  color: #2db67e; }
+
+.active {
+  color: #2db67e; }
+
+.hero-container {
+  width: 100vw;
+  height: 100vh;
+  /* background-repeat: no-repeat; */
+  /* background-image: url("/assets/WebMainPic.jpg"); */
+  /* background-size: cover; */ }
+  .hero-container .hero-text {
+    left: 50%;
+    transform: translateX(-50%);
+    margin-left: auto;
+    position: absolute;
+    margin-right: auto;
+    text-align: center;
+    color: #fff; }
+    .hero-container .hero-text h2 {
+      padding-top: 20px;
+      padding-bottom: 5px;
+      text-align: center;
+      color: #fff;
+      z-index: 3; }
+    .hero-container .hero-text h3 {
+      z-index: 3;
+      text-align: center;
+      color: #fff; }
+  .hero-container .hero-header ul {
+    width: 100%;
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    justify-self: center;
+    position: absolute;
+    bottom: 30px; }
+    .hero-container .hero-header ul a {
+      padding: 20px 50px; }
+  .hero-container .video-container {
+    z-index: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%; }
+    .hero-container .video-container video {
+      z-index: 0;
+      position: absolute;
+      height: 100%;
+      width: auto;
+      /* position: fixed; */ }
+
+/* Fun Buttons */
+#container {
+  margin: auto; }
+  @media (min-width: 48em) {
+    #container {
+      margin-left: 0; } }
+
+button {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  outline: none;
+  border: 0;
+  vertical-align: middle;
+  text-decoration: none;
+  background: transparent;
+  padding: 0;
+  font-size: 1.7em;
+  font-weight: 200;
+  font-family: inherit; }
+
+.learn-more {
+  width: 14rem;
+  height: auto; }
+
+.learn-more .circle {
+  -webkit-transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  position: relative;
+  display: block;
+  margin: 0;
+  width: 3rem;
+  height: 3rem;
+  background: #105157;
+  border-radius: 1.625rem; }
+
+.learn-more .circle .icon {
+  -webkit-transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  background: #efefef; }
+
+.learn-more .circle .icon.arrow {
+  -webkit-transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  left: 0.625rem;
+  width: 1.125rem;
+  height: 0.125rem;
+  background: none; }
+
+.learn-more .circle .icon.arrow::before {
+  position: absolute;
+  content: '';
+  top: -0.25rem;
+  right: 0.0625rem;
+  width: 0.625rem;
+  height: 0.625rem;
+  border-top: 0.125rem solid #efefef;
+  border-right: 0.125rem solid #efefef;
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg); }
+
+.learn-more .button-text {
+  -webkit-transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  /* padding: 0.75rem 0; */
+  padding: 0.4rem 0;
+  /* margin: 0 0 0 2rem; */
+  margin: 0 0 0 2rem;
+  color: #105157;
+  font-weight: 600;
+  line-height: 1.3;
+  text-align: center;
+  text-decoration: none; }
+
+button:hover .circle {
+  width: 100%; }
+
+button:hover .circle .icon .arrow {
+  background: #efefef;
+  -webkit-transform: translate(1rem, 0);
+  transform: translate(1rem, 0); }
+
+button:hover .button-text {
+  color: #efefef; }
+
+.header-container {
+  width: 100%;
+  align-items: center;
+  position: absolute; }
+
+.header {
+  position: relative;
+  margin: auto;
+  padding: 20px 20px;
+  z-index: 2;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  max-width: 1080px;
+  width: 100%; }
+  .header img {
+    margin-left: auto auto 0 auto;
+    width: 60px; }
+  .header ul {
+    display: none;
+    list-style: none;
+    flex-direction: row;
+    margin: auto; }
+    @media (min-width: 48em) {
+      .header ul {
+        display: flex; } }
+  .header a {
+    font-size: 2em;
+    padding: 0 20px;
+    text-decoration: none;
+    color: #fff; }
+
+.active a {
+  color: #fff; }
+
+.menu-btn {
+  margin: 0;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  transition: all 0.5s ease-in-out; }
+
+.menu-btn__burger {
+  width: 30px;
+  height: 4px;
+  background: #efefef;
+  border-radius: 5px;
+  transition: all 0.5s ease-in-out; }
+
+.menu-btn__burger::before,
+.menu-btn__burger::after {
+  content: '';
+  position: absolute;
+  width: 30px;
+  height: 4px;
+  background: #efefef;
+  border-radius: 5px;
+  transition: all 0.5s ease-in-out; }
+
+.menu-btn__burger::before {
+  transform: translateY(-10px); }
+
+.menu-btn__burger::after {
+  transform: translateY(10px); }
+
+/* ANIMATION */
+.menu-btn.open .menu-btn__burger {
+  transform: translateX(-50px);
+  background: transparent;
+  box-shadow: none; }
+
+.menu-btn.open .menu-btn__burger::before {
+  transform: rotate(45deg) translate(35px, -35px); }
+
+.menu-btn.open .menu-btn__burger::after {
+  transform: rotate(-45deg) translate(35px, 35px); }
+
+.home {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  margin: auto;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; }
+  @media (min-width: 48em) {
+    .home {
+      flex-direction: row; } }
+  .home .text-bar {
+    overflow: hidden;
+    display: flex;
+    margin: 0;
+    justify-content: center;
+    align-items: center;
+    width: fit-content;
+    padding: 0;
+    animation: animateHeroText 0.1s ease-in-out forwards;
+    animation-delay: 1s; }
+  .home h1 {
+    font-size: 7em;
+    text-align: center;
+    padding-left: 40px;
+    padding-right: 40px;
+    animation: animateHeader 2s ease-in-out forwards;
+    animation-delay: 1.4s;
+    overflow: hidden;
+    opacity: 0;
+    z-index: -2; }
+    @media (min-width: 48em) {
+      .home h1 {
+        text-align: right; } }
+  .home .vert-rectangle {
+    overflow: hidden;
+    animation: lineIn 0.7s ease-in-out forwards;
+    animation-delay: 0.7s;
+    display: none;
+    width: 5px;
+    height: 250px;
+    z-index: 2;
+    border-radius: 10px;
+    align-self: center;
+    background: #105157; }
+    @media (min-width: 48em) {
+      .home .vert-rectangle {
+        display: inline; } }
+  .home img {
+    padding-left: 40px;
+    margin-left: 0;
+    width: 400px;
+    height: 400px;
+    transform: translateX(-50%);
+    animation: animateHeroImage 1s ease-in-out forwards;
+    animation-delay: 0.5s; }
+
+.section-header {
+  margin-left: 0;
+  width: 100vw; }
+  .section-header h2 {
+    font-size: 4em;
+    margin: auto;
+    text-align: center;
+    padding: 5px 20px; }
+  .section-header .fancy-rectangle {
+    margin: auto;
+    width: 270px;
+    height: 5px;
+    border-radius: 5px;
+    background-color: #efefef; }
+
+@keyframes animateHeroText {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+
+@keyframes animateHeroImage {
+  0% {
+    transform: translateX(-50%); }
+  100% {
+    transform: translateX(0px); } }
+
+@keyframes lineIn {
+  0% {
+    height: 1em; }
+  100% {
+    height: 20em; } }
+
+@keyframes animateHeader {
+  0% {
+    transform: translateX(200px);
+    opacity: 0; }
+  100% {
+    transform: translateX(0px);
+    opacity: 1; } }
