--- a/src/styles/components/all.css
+++ b/src/styles/components/all.css
@@ -1,1 +1,144 @@
-@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");.hero-container{width:100vw;height:100vh;background-repeat:no-repeat;background-image:url("/assets/WebMainPic.jpg");background-size:cover}.hero-container .hero-text{margin-left:auto;margin-right:auto;text-align:center;color:#fff}.hero-container .hero-text h2{padding-top:20px;padding-bottom:5px;color:#fff}.hero-container .hero-text h3{color:#fff}.hero-container .hero-header ul{width:100%;list-style:none;display:flex;justify-content:center;justify-self:center;position:absolute;bottom:30px}.hero-container .hero-header ul a{padding:20px 50px}#container{margin:auto}@media (min-width: 48em){#container{margin-left:0}}button{position:relative;display:inline-block;cursor:pointer;outline:none;border:0;vertical-align:middle;text-decoration:none;background:transparent;padding:0;font-size:1.7em;font-weight:200;font-family:inherit}.learn-more{width:14rem;height:auto}.learn-more .circle{-webkit-transition:all 0.45s cubic-bezier(0.65, 0, 0.076, 1);transition:all 0.45s cubic-bezier(0.65, 0, 0.076, 1);position:relative;display:block;margin:0;width:3rem;height:3rem;background:#105157;border-radius:1.625rem}.learn-more .circle .icon{-webkit-transition:all 0.45s cubic-bezier(0.65, 0, 0.076, 1);transition:all 0.45s cubic-bezier(0.65, 0, 0.076, 1);position:absolute;top:0;bottom:0;margin:auto;background:#efefef}.learn-more .circle .icon.arrow{-webkit-transition:all 0.45s cubic-bezier(0.65, 0, 0.076, 1);transition:all 0.45s cubic-bezier(0.65, 0, 0.076, 1);left:0.625rem;width:1.125rem;height:0.125rem;background:none}.learn-more .circle .icon.arrow::before{position:absolute;content:'';top:-0.25rem;right:0.0625rem;width:0.625rem;height:0.625rem;border-top:0.125rem solid #efefef;border-right:0.125rem solid #efefef;-webkit-transform:rotate(45deg);transform:rotate(45deg)}.learn-more .button-text{-webkit-transition:all 0.45s cubic-bezier(0.65, 0, 0.076, 1);transition:all 0.45s cubic-bezier(0.65, 0, 0.076, 1);position:absolute;top:0;left:0;right:0;bottom:0;padding:0.4rem 0;margin:0 0 0 2rem;color:#105157;font-weight:600;line-height:1.3;text-align:center;text-decoration:none}button:hover .circle{width:100%}button:hover .circle .icon .arrow{background:#efefef;-webkit-transform:translate(1rem, 0);transform:translate(1rem, 0)}button:hover .button-text{color:#efefef}
+@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
+.hero-container {
+  width: 100vw;
+  height: 100vh;
+  /* background-repeat: no-repeat; */
+  /* background-image: url("/assets/WebMainPic.jpg"); */
+  /* background-size: cover; */ }
+  .hero-container .hero-text {
+    left: 50%;
+    transform: translateX(-50%);
+    margin-left: auto;
+    position: absolute;
+    margin-right: auto;
+    text-align: center;
+    color: #fff; }
+    .hero-container .hero-text h2 {
+      padding-top: 20px;
+      padding-bottom: 5px;
+      text-align: center;
+      color: #fff;
+      z-index: 3; }
+    .hero-container .hero-text h3 {
+      z-index: 3;
+      text-align: center;
+      color: #fff; }
+  .hero-container .hero-header ul {
+    width: 100%;
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    justify-self: center;
+    position: absolute;
+    bottom: 30px; }
+    .hero-container .hero-header ul a {
+      padding: 20px 50px; }
+  .hero-container .video-container {
+    z-index: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%; }
+    .hero-container .video-container video {
+      z-index: 0;
+      position: absolute;
+      height: 100%;
+      width: auto;
+      /* position: fixed; */ }
+
+/* Fun Buttons */
+#container {
+  margin: auto; }
+  @media (min-width: 48em) {
+    #container {
+      margin-left: 0; } }
+
+button {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  outline: none;
+  border: 0;
+  vertical-align: middle;
+  text-decoration: none;
+  background: transparent;
+  padding: 0;
+  font-size: 1.7em;
+  font-weight: 200;
+  font-family: inherit; }
+
+.learn-more {
+  width: 14rem;
+  height: auto; }
+
+.learn-more .circle {
+  -webkit-transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  position: relative;
+  display: block;
+  margin: 0;
+  width: 3rem;
+  height: 3rem;
+  background: #105157;
+  border-radius: 1.625rem; }
+
+.learn-more .circle .icon {
+  -webkit-transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  background: #efefef; }
+
+.learn-more .circle .icon.arrow {
+  -webkit-transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  left: 0.625rem;
+  width: 1.125rem;
+  height: 0.125rem;
+  background: none; }
+
+.learn-more .circle .icon.arrow::before {
+  position: absolute;
+  content: '';
+  top: -0.25rem;
+  right: 0.0625rem;
+  width: 0.625rem;
+  height: 0.625rem;
+  border-top: 0.125rem solid #efefef;
+  border-right: 0.125rem solid #efefef;
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg); }
+
+.learn-more .button-text {
+  -webkit-transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  /* padding: 0.75rem 0; */
+  padding: 0.4rem 0;
+  /* margin: 0 0 0 2rem; */
+  margin: 0 0 0 2rem;
+  color: #105157;
+  font-weight: 600;
+  line-height: 1.3;
+  text-align: center;
+  text-decoration: none; }
+
+button:hover .circle {
+  width: 100%; }
+
+button:hover .circle .icon .arrow {
+  background: #efefef;
+  -webkit-transform: translate(1rem, 0);
+  transform: translate(1rem, 0); }
+
+button:hover .button-text {
+  color: #efefef; }
