📝 About section done

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap');
 
-$accent-1: #2db67e;
-$text-dark: #105157;
+$accent-1: #67BAB6;
+$text-dark: #000;
 $text-light: #fff;
 $bg-color: #efefef;
 
