--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -46,12 +46,15 @@
     top: 0;
     width: 100%;
     height: 100%;
+    overflow: hidden;
     & video {
-    z-index: 0;
-    position: absolute;
-    height: 100%;
-    width: auto;
-          /* position: fixed; */
+      z-index: 0;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: auto;
+      height: 100%;
     }
   }
 }
