--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -13,6 +13,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
 * {
   box-sizing: border-box;
   margin: 0; }
@@ -65,10 +67,10 @@ a {
   color: #fff; }
 
 .accent {
-  color: #2db67e; }
+  color: #67BAB6; }
 
 .active {
-  color: #2db67e; }
+  color: #67BAB6; }
 
 .hero-container {
   width: 100vw;
@@ -109,13 +111,16 @@ a {
     position: absolute;
     top: 0;
     width: 100%;
-    height: 100%; }
+    height: 100%;
+    overflow: hidden; }
     .hero-container .video-container video {
       z-index: 0;
       position: absolute;
-      height: 100%;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
       width: auto;
-      /* position: fixed; */ }
+      height: 100%; }
 
 /* Fun Buttons */
 #container {
@@ -150,7 +155,7 @@ button {
   margin: 0;
   width: 3rem;
   height: 3rem;
-  background: #105157;
+  background: #000;
   border-radius: 1.625rem; }
 
 .learn-more .circle .icon {
@@ -194,7 +199,7 @@ button {
   padding: 0.4rem 0;
   /* margin: 0 0 0 2rem; */
   margin: 0 0 0 2rem;
-  color: #105157;
+  color: #000;
   font-weight: 600;
   line-height: 1.3;
   text-align: center;
@@ -210,6 +215,49 @@ button:hover .circle .icon .arrow {
 
 button:hover .button-text {
   color: #efefef; }
+
+.about-container {
+  max-width: 1080px;
+  padding-top: 20vh;
+  padding-bottom: 20vh;
+  width: 100vw;
+  height: 75vh;
+  margin: auto; }
+  .about-container .about-text {
+    display: flex;
+    flex-direction: row;
+    margin: auto;
+    justify-content: center;
+    /* align-items: center; */ }
+    .about-container .about-text h1 {
+      color: #000;
+      font-size: 5em;
+      align-self: center;
+      padding: 100px; }
+    .about-container .about-text p {
+      color: #000;
+      font-size: 1.8em;
+      font-weight: 300;
+      padding: 100px;
+      align-self: center;
+      max-width: 700px; }
+    .about-container .about-text .fancy-rectangle {
+      width: 70px;
+      border-radius: 5px;
+      overflow: hidden;
+      background: #67BAB6;
+      z-index: 2; }
+  .about-container .button-container {
+    width: 100%;
+    height: 100%;
+    justify-content: center; }
+    .about-container .button-container button {
+      position: absolute;
+      font-size: 2.5em;
+      padding: 10px 20px;
+      background-color: #67BAB6;
+      border-radius: 20px;
+      color: #efefef; }
 
 .header-container {
   width: 100%;
@@ -337,7 +385,7 @@ button:hover .button-text {
     z-index: 2;
     border-radius: 10px;
     align-self: center;
-    background: #105157; }
+    background: #000; }
     @media (min-width: 48em) {
       .home .vert-rectangle {
         display: inline; } }
