--- a/scss/components/_about.scss
+++ b/scss/components/_about.scss
@@ -1,12 +1,12 @@
 @import '../abstracts/all.scss';
 
 .about-container {
-    max-width: 1080px;
-    padding-top: 20vh;
-    padding-bottom: 20vh;
-    width: 100vw;
-    height: 75vh;
-    margin: auto;
+  max-width: 1080px;
+  padding-top: 20vh;
+  padding-bottom: 20vh;
+  width: 100vw;
+  height: 75vh;
+  margin: auto auto 200px auto;
   .about-text {
     display: flex;
     flex-direction: row;
@@ -41,6 +41,9 @@
     justify-content: center;
     & button {
       position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      margin-top: 100px;
       font-size: 2.5em;
       padding: 10px 20px;
       background-color: $accent-1;
