--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -45,15 +45,16 @@
     position: absolute;
     top: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     overflow: hidden;
     & video {
+      object-fit: cover;
       z-index: 0;
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      width: auto;
+      width: 100vw;
       height: 100%;
     }
   }
