--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -111,15 +111,16 @@ a {
     position: absolute;
     top: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     overflow: hidden; }
     .hero-container .video-container video {
+      object-fit: cover;
       z-index: 0;
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      width: auto;
+      width: 100vw;
       height: 100%; }
 
 /* Fun Buttons */
@@ -222,7 +223,7 @@ button:hover .button-text {
   padding-bottom: 20vh;
   width: 100vw;
   height: 75vh;
-  margin: auto; }
+  margin: auto auto 200px auto; }
   .about-container .about-text {
     display: flex;
     flex-direction: row;
@@ -253,11 +254,37 @@ button:hover .button-text {
     justify-content: center; }
     .about-container .button-container button {
       position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      margin-top: 100px;
       font-size: 2.5em;
       padding: 10px 20px;
       background-color: #67BAB6;
       border-radius: 20px;
       color: #efefef; }
+
+.trap-container {
+  display: grid;
+  width: 100vw; }
+  .trap-container .upperText {
+    margin-top: 5%; }
+  .trap-container .lowerText {
+    margin-top: 10%; }
+  .trap-container h1 {
+    font-size: 5.5em;
+    margin-right: auto;
+    margin-left: auto;
+    grid-row: 1;
+    z-index: 2;
+    grid-column: 1; }
+  .trap-container img {
+    object-fit: contain;
+    width: 100vw;
+    margin: auto;
+    grid-row: 1;
+    grid-column: 1; }
+  .trap-container .lower {
+    transform: rotate(180deg); }
 
 .header-container {
   width: 100%;
