--- a/src/styles/components/all.css
+++ b/src/styles/components/all.css
@@ -4,6 +4,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
 .hero-container {
   width: 100vw;
   height: 100vh;
@@ -217,3 +219,83 @@ button:hover .button-text {
     grid-column: 1; }
   .trap-container .lower {
     transform: rotate(180deg); }
+
+.project-card-container {
+  max-width: 1000px;
+  padding: 50px 0;
+  display: flex;
+  flex-direction: row;
+  margin: auto;
+  justify-content: center; }
+  .project-card-container .left-project-card {
+    margin: auto;
+    width: 100%; }
+    .project-card-container .left-project-card p {
+      color: #000;
+      font-size: 1.5em;
+      font-weight: 300;
+      padding: 70px 50px 0px 50px;
+      align-self: center;
+      max-width: 700px; }
+  .project-card-container .right-project-card-image-group {
+    margin: auto;
+    padding: 50px;
+    width: 100%; }
+    .project-card-container .right-project-card-image-group p {
+      color: #000;
+      font-size: 1.5em;
+      font-weight: 300;
+      padding: 70px 50px 0px 50px;
+      align-self: center;
+      max-width: 700px; }
+  .project-card-container .right-project-card {
+    margin: auto;
+    width: 100%; }
+    .project-card-container .right-project-card p {
+      color: #000;
+      font-size: 1.5em;
+      font-weight: 300;
+      padding: 70px 50px 0px 50px;
+      align-self: center;
+      max-width: 700px; }
+  .project-card-container h2 {
+    color: #67BAB6;
+    font-size: 2.4em;
+    font-weight: 300;
+    padding: 40px 20px;
+    align-self: center;
+    text-align: left;
+    max-width: 700px; }
+  .project-card-container .fancy-rectangle {
+    margin: auto;
+    width: 20px;
+    height: 400px;
+    border-radius: 5px;
+    overflow: hidden;
+    background: #67BAB6;
+    z-index: 2; }
+  .project-card-container .project-logo {
+    max-width: 400px;
+    margin: auto;
+    border-radius: 20px;
+    align-self: center;
+    justify-self: center; }
+  .project-card-container .project-image {
+    margin: auto;
+    max-width: 400px;
+    border-radius: 20px;
+    align-self: center;
+    justify-self: center; }
+  .project-card-container .button-container {
+    width: 100%;
+    height: 100%;
+    justify-content: center; }
+    .project-card-container .button-container button {
+      left: 50%;
+      transform: translateX(-50%);
+      margin-top: 100px;
+      font-size: 2.5em;
+      padding: 10px 20px;
+      background-color: #67BAB6;
+      border-radius: 20px;
+      color: #efefef; }
