--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -17,6 +17,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
 * {
   box-sizing: border-box;
   margin: 0; }
@@ -28,8 +30,12 @@ html {
 body {
   background-color: #efefef; }
 
+#root {
+  overflow: hidden;
+  width: 100%; }
+
 .app {
-  width: 100vw;
+  width: 100%;
   overflow: hidden; }
 
 body {
@@ -223,7 +229,7 @@ button:hover .button-text {
   max-width: 1080px;
   padding-top: 20vh;
   padding-bottom: 20vh;
-  width: 100vw;
+  width: 100%;
   height: 75vh;
   margin: auto auto 200px auto; }
   .about-container .about-text {
@@ -267,7 +273,8 @@ button:hover .button-text {
 
 .trap-container {
   display: grid;
-  width: 100vw; }
+  width: 100%;
+  overflow: hidden; }
   .trap-container .upperText {
     margin-top: 5%; }
   .trap-container .lowerText {
@@ -289,7 +296,8 @@ button:hover .button-text {
     transform: rotate(180deg); }
 
 .project-card-container {
-  max-width: 1000px;
+  overflow: hidden;
+  max-width: 1080px;
   padding: 50px 0;
   display: flex;
   flex-direction: row;
@@ -367,6 +375,44 @@ button:hover .button-text {
       background-color: #67BAB6;
       border-radius: 20px;
       color: #efefef; }
+
+.contact-container {
+  width: 100%;
+  overflow: hidden;
+  background-color: #67BAB6;
+  margin: auto; }
+  .contact-container h2 {
+    font-size: 3em;
+    text-align: center;
+    padding: 40px; }
+  .contact-container .button-container {
+    margin: auto;
+    width: 100%;
+    text-align: center;
+    padding: 20px; }
+    .contact-container .button-container a {
+      margin: auto;
+      background-color: #efefef;
+      padding: 12px 25px;
+      border-radius: 15px;
+      font-size: 2.5em;
+      color: #000; }
+  .contact-container .links {
+    padding: 40px;
+    margin: auto;
+    align-items: center;
+    justify-content: center;
+    display: flex; }
+    .contact-container .links a {
+      padding: 0 20px; }
+  .contact-container .credit {
+    text-align: center;
+    font-size: 1.5em;
+    padding-bottom: 40px; }
+    .contact-container .credit a {
+      font-size: 1em; }
+    .contact-container .credit i {
+      font-size: 0.8em; }
 
 .header-container {
   width: 100%;
