--- a/scss/components/_about.scss
+++ b/scss/components/_about.scss
@@ -4,7 +4,7 @@
   max-width: 1080px;
   padding-top: 20vh;
   padding-bottom: 20vh;
-  width: 100vw;
+  width: 100%;
   height: 75vh;
   margin: auto auto 200px auto;
   .about-text {
