--- a/scss/components/_trapezoid.scss
+++ b/scss/components/_trapezoid.scss
@@ -1,6 +1,7 @@
 .trap-container {
   display: grid;
-  width: 100vw;
+  width: 100%;
+  overflow: hidden;
   & .upperText {
     margin-top: 5%;
   }
