--- a/src/styles/components/all.css
+++ b/src/styles/components/all.css
@@ -340,4 +340,5 @@ button:hover .button-text {
     .contact-container .credit a {
       font-size: 1em; }
     .contact-container .credit i {
-      font-size: 0.8em; }
+      font-size: 0.8em;
+      padding-right: 8px; }
