--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -2,6 +2,9 @@
 .hero-container {
   width: 100vw;
   height: 100vh;
+  @media screen and (max-width: $medium) {
+    height: 50vh;
+  } 
   /* background-repeat: no-repeat; */
   /* background-image: url("/assets/WebMainPic.jpg"); */
   /* background-size: cover; */
@@ -13,21 +16,44 @@
     margin-right: auto;
     text-align: center;
     color: $text-light;
+    @media screen and (max-width: $medium) {
+      width: 100%;
+      margin-left: 0;
+      font-size: 1.6em;
+      text-align: left;
+    }
     & h2 {
       padding-top: 20px;
       padding-bottom: 5px;
-    text-align: center;
+      text-align: center;
       color: $text-light;
       z-index: 3;
+      @media screen and (max-width: $medium) {
+        width: 100%;
+        padding-top: 10px;
+        font-size: 1.3em;
+        text-align: center;
+        font-weight: 400;
+        padding-bottom: 0;
+      }
     }
     & h3 {
       z-index: 3;
-    text-align: center;
+      text-align: center;
       color: $text-light;
+      @media screen and (max-width: $medium) {
+        width: 100%;
+        font-size: 0.8em;
+        text-align: center;
+        font-weight: 400;
+      }
     }
   }
   & .hero-header {
     & ul {
+      @media screen and (max-width: $medium) {
+        display: none;
+      }
       width: 100%;
       list-style: none;
       display: flex;
@@ -45,17 +71,32 @@
     position: absolute;
     top: 0;
     width: 100%;
-    height: 100vh;
+    height: 50vh;
     overflow: hidden;
+
+    @media screen and (max-width: $medium) {
+      height: 50vh;
+      width: 100%;
+      font-size: 1em;
+      text-align: center;
+      font-weight: 400;
+    }
     & video {
       object-fit: cover;
       z-index: 0;
       position: absolute;
-      top: 50%;
+      top: 25%;
       left: 50%;
       transform: translate(-50%, -50%);
       width: 100vw;
-      height: 100%;
+      height: 100vh;
+      @media screen and (max-width: $medium) {
+        top: 50%;
+        height: 50vh;
+        font-size: 1em;
+        text-align: center;
+        font-weight: 400;
+      }
     }
   }
 }
