--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -165,6 +165,7 @@ a {
       height: 100vh; }
       @media screen and (max-width: 500px) {
         .hero-container .video-container video {
+          position: relative;
           top: 50%;
           height: 50vh;
           font-size: 1em;
@@ -272,17 +273,33 @@ button:hover .button-text {
   width: 100%;
   height: 75vh;
   margin: auto auto 200px auto; }
+  @media screen and (max-width: 500px) {
+    .about-container {
+      height: 50vh;
+      padding: 0;
+      margin: 0; } }
   .about-container .about-text {
     display: flex;
     flex-direction: row;
     margin: auto;
     justify-content: center;
     /* align-items: center; */ }
+    @media screen and (max-width: 500px) {
+      .about-container .about-text {
+        flex-direction: column;
+        height: 50vh; } }
     .about-container .about-text h1 {
       color: #000;
       font-size: 5em;
       align-self: center;
       padding: 100px; }
+      @media screen and (max-width: 500px) {
+        .about-container .about-text h1 {
+          font-size: 3.5em;
+          text-align: center;
+          width: 100%;
+          padding: 50px 0 0 0;
+          margin-top: -100px; } }
     .about-container .about-text p {
       color: #000;
       font-size: 1.8em;
@@ -290,6 +307,11 @@ button:hover .button-text {
       padding: 100px;
       align-self: center;
       max-width: 700px; }
+      @media screen and (max-width: 500px) {
+        .about-container .about-text p {
+          font-size: 1.2em;
+          padding: 40px;
+          width: 100%; } }
     .about-container .about-text .fancy-rectangle {
       width: 70px;
       border-radius: 5px;
@@ -300,6 +322,9 @@ button:hover .button-text {
     width: 100%;
     height: 100%;
     justify-content: center; }
+    @media screen and (max-width: 500px) {
+      .about-container .button-container {
+        margin: 0; } }
     .about-container .button-container button {
       position: absolute;
       left: 50%;
@@ -310,6 +335,13 @@ button:hover .button-text {
       background-color: #67BAB6;
       border-radius: 20px;
       color: #efefef; }
+      @media screen and (max-width: 500px) {
+        .about-container .button-container button {
+          position: relative;
+          border-radius: 15px;
+          font-size: 2em;
+          margin-top: -150px;
+          padding: 8px 12px; } }
 
 .trap-container {
   display: grid;
