--- a/scss/components/_trapezoid.scss
+++ b/scss/components/_trapezoid.scss
@@ -4,9 +4,15 @@
   overflow: hidden;
   & .upperText {
     margin-top: 5%;
+    @media screen and (max-width: $medium) {
+      margin-top: 10%;
+    }
   }
   & .lowerText {
     margin-top: 10%;
+    @media screen and (max-width: $medium) {
+      margin-top: 25%;
+    }
   }
   & h1 {
     font-size: 5.5em;
@@ -15,6 +21,9 @@
     grid-row: 1;
     z-index: 2;
     grid-column: 1;
+    @media screen and (max-width: $medium) {
+      font-size: 3.5em;
+    }
   }
   & img {
     object-fit: contain;
@@ -22,6 +31,9 @@
     margin: auto;
     grid-row: 1;
     grid-column: 1;
+    @media screen and (max-width: $medium) {
+      width: 210%;
+    }
   }
   & .lower {
     transform: rotate(180deg);
