--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap');
 
-$accent-1: #67BAB6;
+$accent-1: #68bab7;
 $text-dark: #000;
 $text-light: #fff;
 $bg-color: #efefef;
