--- a/scss/components/_about.scss
+++ b/scss/components/_about.scss
@@ -28,7 +28,8 @@
       align-self: center;
       padding: 100px;
       @media screen and (max-width: $medium) {
-        font-size: 3.5em;
+        font-size: 2.5em;
+        font-weight: 100;
         text-align: center;
         width: 100%;
         padding: 50px 0 0 0;
@@ -43,8 +44,9 @@
       align-self: center;
       max-width: 700px;
       @media screen and (max-width: $medium) {
-        font-size: 1.2em;
-        padding: 40px;
+        font-size: 1.1em;
+        font-weight: 200;
+        padding: 30px 40px 40px 40px;
         width: 100%;
       }
     }
