--- a/scss/components/all.scss
+++ b/scss/components/all.scss
@@ -5,3 +5,5 @@
 @import '_projectCard.scss';
 @import '_contact.scss';
 @import '_guitar.scss';
+@import '_robot.scss';
+@import '_assortedProjects.scss';
