--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -21,6 +21,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
 * {
   box-sizing: border-box;
   margin: 0; }
@@ -62,12 +64,12 @@ h2 {
 h3 {
   font-family: 'Barlow Semi Condensed', sans-serif;
   font-size: 2.5em;
-  font-weight: 400; }
+  font-weight: 300; }
 
 p {
   font-family: 'Barlow Semi Condensed', sans-serif;
   font-size: 1.5em;
-  font-weight: 400; }
+  font-weight: 300; }
 
 a {
   text-decoration: none;
@@ -636,6 +638,48 @@ button:hover .button-text {
 .guitar-container .last-grid-item {
   margin-top: -50px;
   grid-template-rows: auto; }
+
+.robot-container .robot-grid {
+  max-width: 1080px;
+  padding: 0;
+  margin: auto auto auto auto;
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: minmax(400px, auto-fit) minmax(400px, auto-fill); }
+  .robot-container .robot-grid p {
+    padding: 30px;
+    font-weight: 300;
+    font-size: 27px;
+    line-height: 1.3;
+    color: #000;
+    height: auto;
+    margin: auto; }
+  .robot-container .robot-grid img {
+    padding: 50px;
+    width: 100%;
+    border-radius: 5em;
+    height: auto;
+    margin: auto; }
+  .robot-container .robot-grid .img1 {
+    object-fit: cover;
+    width: 100%; }
+
+.robot-container .last-grid-item {
+  display: grid;
+  margin-top: -50px; }
+  .robot-container .last-grid-item .img2 {
+    grid-column: 1;
+    grid-row: 1;
+    max-height: 80%;
+    max-width: 80%;
+    transform: translate(-80px, 100px);
+    z-index: 2; }
+  .robot-container .last-grid-item .img3 {
+    grid-column: 1;
+    grid-row: 1;
+    max-height: 80%;
+    max-width: 80%;
+    transform: translate(170px, -100px); }
 
 .header-container {
   width: 100%;
