--- a/src/styles/abstracts/all.css
+++ b/src/styles/abstracts/all.css
@@ -1,1 +1,2 @@
-@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap")
+@import url('https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap');
