--- a/src/styles/layout/all.css
+++ b/src/styles/layout/all.css
@@ -1,1 +1,88 @@
-@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");.header-container{width:100%;align-items:center;position:absolute}.header{position:relative;margin:auto;padding:20px 20px;z-index:2;display:flex;flex-direction:row;justify-content:center;align-items:center;max-width:1080px;width:100%}.header img{margin-left:auto auto 0 auto;width:60px}.header ul{display:none;list-style:none;flex-direction:row;margin:auto}@media (min-width: 48em){.header ul{display:flex}}.header a{font-size:2em;padding:0 20px;text-decoration:none;color:#fff}.active a{color:#fff}.menu-btn{margin:0;position:relative;display:flex;justify-content:center;align-items:center;width:40px;height:40px;cursor:pointer;transition:all 0.5s ease-in-out}.menu-btn__burger{width:30px;height:4px;background:#efefef;border-radius:5px;transition:all 0.5s ease-in-out}.menu-btn__burger::before,.menu-btn__burger::after{content:'';position:absolute;width:30px;height:4px;background:#efefef;border-radius:5px;transition:all 0.5s ease-in-out}.menu-btn__burger::before{transform:translateY(-10px)}.menu-btn__burger::after{transform:translateY(10px)}.menu-btn.open .menu-btn__burger{transform:translateX(-50px);background:transparent;box-shadow:none}.menu-btn.open .menu-btn__burger::before{transform:rotate(45deg) translate(35px, -35px)}.menu-btn.open .menu-btn__burger::after{transform:rotate(-45deg) translate(35px, 35px)}
+@import url('https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap');
+.header-container {
+  width: 100%;
+  align-items: center;
+  position: absolute;
+}
+.header {
+  position: relative;
+  margin: auto;
+  padding: 20px 20px;
+  z-index: 2;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  max-width: 1080px;
+  width: 100%;
+}
+.header img {
+  margin-left: auto auto 0 auto;
+  width: 60px;
+}
+.header ul {
+  display: none;
+  list-style: none;
+  flex-direction: row;
+  margin: auto;
+}
+@media (min-width: 48em) {
+  .header ul {
+    display: flex;
+  }
+}
+.header a {
+  font-size: 2em;
+  padding: 0 20px;
+  text-decoration: none;
+  color: #fff;
+}
+.active a {
+  color: #fff;
+}
+.menu-btn {
+  margin: 0;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  transition: all 0.5s ease-in-out;
+}
+.menu-btn__burger {
+  width: 30px;
+  height: 4px;
+  background: #efefef;
+  border-radius: 5px;
+  transition: all 0.5s ease-in-out;
+}
+.menu-btn__burger::before,
+.menu-btn__burger::after {
+  content: '';
+  position: absolute;
+  width: 30px;
+  height: 4px;
+  background: #efefef;
+  border-radius: 5px;
+  transition: all 0.5s ease-in-out;
+}
+.menu-btn__burger::before {
+  transform: translateY(-10px);
+}
+.menu-btn__burger::after {
+  transform: translateY(10px);
+}
+.menu-btn.open .menu-btn__burger {
+  transform: translateX(-50px);
+  background: transparent;
+  box-shadow: none;
+}
+.menu-btn.open .menu-btn__burger::before {
+  transform: rotate(45deg) translate(35px, -35px);
+}
+.menu-btn.open .menu-btn__burger::after {
+  transform: rotate(-45deg) translate(35px, 35px);
+}
