--- a/scss/components/_projectCard.scss
+++ b/scss/components/_projectCard.scss
@@ -65,7 +65,7 @@
     }
   }
   & h2 {
-    color: $accent-1;
+    color: #32867b;
     font-size: 2.4em;
     font-weight: 300;
     padding: 40px 20px;
