--- a/scss/components/_contact.scss
+++ b/scss/components/_contact.scss
@@ -8,7 +8,11 @@
   & h2 {
     font-size: 3em;
     text-align: center;
-    padding: 40px;
+    padding-bottom: 50px;
+
+    @media screen and (max-width: $medium) {
+      padding: 30px 20px 50px 20px;
+    }
   }
   & .button-container {
     margin: auto;
