--- a/scss/components/_guitar.scss
+++ b/scss/components/_guitar.scss
@@ -2,17 +2,29 @@
 .floatingHomeIcon {
   position: absolute;
   padding: 30px;
+
+  @media screen and (max-width: $medium) {
+    display: none;
+  }
 }
 .left-arrow {
   position: fixed;
   left: 2%;
   top: 50%;
+  @media screen and (max-width: $medium) {
+    transform: scale(0.5);
+    left: 0%;
+  }
 }
 .right-arrow {
   position: fixed;
   transform: rotate(180deg);
   right: 2%;
   top: 50%;
+  @media screen and (max-width: $medium) {
+    transform: rotate(180deg) scale(0.5);
+    right: 0%;
+  }
 }
 .guitar-container {
   & .guitar-grid {
@@ -20,12 +32,12 @@
     padding: 0;
     margin: -100px auto auto auto;
     display: grid;
-
-    // grid-template-columns: minmax(200px, 500px) minmax(200px, 500px);
-    // grid-template-columns: auto auto;
     grid-template-columns: auto auto;
     grid-template-rows: minmax(400px, auto-fit) minmax(400px, auto-fill);
-    // grid-template-rows: repeat(auto);
+    @media screen and (max-width: $medium) {
+      grid-template-columns: auto;
+      margin: auto;
+    }
     & p {
       padding: 30px;
       font-weight: 100;
@@ -34,6 +46,10 @@
       color: $text-dark;
       height: auto;
       margin: auto;
+      @media screen and (max-width: $medium) {
+        font-size: 1.1em;
+        padding: 20px 60px;
+      }
     }
     & img {
       padding: 50px;
@@ -46,17 +62,41 @@
       object-fit: cover;
       max-height: 70%;
       width: 100%;
+      @media screen and (max-width: $medium) {
+      max-height: 100%;
+      }
     }
 
     & .img2 {
       margin-top: -100px;
+      @media screen and (max-width: $medium) {
+       margin: auto; 
+      }
     }
     & .p2 {
       margin-top: -100px;
+      @media screen and (max-width: $medium) {
+       margin: auto; 
+      }
     }
   }
   & .last-grid-item {
     margin-top: -50px;
     grid-template-rows: auto;
+  }
+  & .photo-group {
+    display: grid;
+    & .img2 {
+      grid-column: 1;
+      grid-row: 1;
+      transform: translate(50px, -90px) scale(.75);
+    }
+    & .img3 {
+      max-height: 85%;
+      object-fit: cover;
+      grid-column: 1;
+      grid-row: 1;
+      transform: translate(-50px, 50px) scale(.75);
+    }
   }
 }
