--- a/scss/components/_trapezoid.scss
+++ b/scss/components/_trapezoid.scss
@@ -22,7 +22,7 @@
     z-index: 2;
     grid-column: 1;
     @media screen and (max-width: $medium) {
-      font-size: 3.5em;
+      font-size: 3em;
     }
   }
   & .homeIcon {
@@ -43,9 +43,17 @@
     padding: 10px 20px;
     border-radius: 20px;
     background-color: #efefef;
+
+    @media screen and (max-width: $medium) {
+      padding: 10px 10px 1px 10px;
+      border-radius: 15px;
+    }
     & h3 {
       font-size: 0.8em;
       padding-right: 10px;
+      @media screen and (max-width: $medium) {
+        font-size: .6em;
+      }
     }
   }
   & a {
