--- a/scss/components/_robot.scss
+++ b/scss/components/_robot.scss
@@ -8,6 +8,11 @@
     display: grid;
     grid-template-columns: auto auto;
     grid-template-rows: minmax(400px, auto-fit) minmax(400px, auto-fill);
+
+    @media screen and (max-width: $medium) {
+      grid-template-columns: auto;
+      margin: auto;
+    }
     & p {
       padding: 30px;
       font-weight: 300;
@@ -16,6 +21,11 @@
       color: $text-dark;
       height: auto;
       margin: auto;
+
+      @media screen and (max-width: $medium) {
+        font-size: 1.1em;
+        padding: 20px 60px;
+      }
     }
     & img {
       padding: 50px;
