--- a/scss/components/_trapezoid.scss
+++ b/scss/components/_trapezoid.scss
@@ -23,6 +23,7 @@
     grid-column: 1;
     @media screen and (max-width: $medium) {
       font-size: 3em;
+      text-align: center;
     }
   }
   & .homeIcon {
